--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/energyaspects/capacitor-plugin-swipe-back.git"
+    "url": "https://github.com/energyaspects/capacitor-plugin-swipe-back.git"
   },
   "bugs": {
     "url": "https://github.com/alesmraz/capacitor-plugin-swipe-back/issues"
