--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ea-capacitor-swipe-back-plugin",
-  "version": "3.0.0",
+  "name": "@energyaspects/ea-capacitor-swipe-back-plugin",
+  "version": "3.0.1",
   "description": "Capacitor swipe back plugin. For Capacitor v3, v4 (0.0.3), v5 (1.0.0), v6 (2.0.0) and v7 (3.0.0). For v2 use original plugin: https://github.com/diiiary/capacitor-plugin-ios-swipe-back",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -17,7 +17,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/energyaspects/capacitor-plugin-swipe-back.git"
+    "url": "git+https://github.com/energyaspects/capacitor-plugin-swipe-back.git"
   },
   "bugs": {
     "url": "https://github.com/alesmraz/capacitor-plugin-swipe-back/issues"
@@ -27,6 +27,9 @@
     "plugin",
     "native"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
     "verify:ios": "cd ios && pod install && xcodebuild -workspace Plugin.xcworkspace -scheme Plugin -destination generic/platform=iOS && cd ..",
