--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,4 +20,5 @@ org.gradle.jvmargs=-Xmx1536m
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-
+android.suppressUnsupportedCompileSdk=35
+org.gradle.java.home=/opt/homebrew/Cellar/openjdk@21/21.0.8/libexec/openjdk.jdk/Contents/Home
